# web-crawler

./: .gitignor  .gitignore  README.md  cli.py  definition.py  pyproject.toml  schedule_crawler.py  schedule_demo.py  schedule_start.bat  schedule_start.txt  專案開發訓練.md
FastAPI_examples/: demo_crawler_test.py  demo_main.py  demo_req_body.py
SqlAlchemy_data/: database_CRUD.py  database_first.py  demo_sql_CRUD.py
api/: main.py  website_api.py
api/routers/: api.py  api_html.py
api/templates/: detail.html  error.html  item.html  main.html  update_post.html
crawler/: crawler_591.py  crawler_housefun.py  driver_handler.py  set_driver.py
image/: 工作項目.drawio  架構.drawio  開發時程.drawio
jinja2_test/: Jinja2_demo.py  website_api.py
jinja2_test/static/: styles.css
jinja2_test/templates/: detail.html  item.html  new_post.html  update_post.html
lease_crawler/: crawler_main.py
memo/: jinja2_demo.py  memo.md  test_exception.py
sql_app/: .env  crud.py  database.py  main.py  models.py  schemas.py
sql_app/crud/: logs.py  posts.py
test/: test_exception.py
tests/: conftest.py
tests/sql_app/: crud_test.py
tests/sql_app/crud/: test_crud.py  test_logs.py  test_posts.py
