[tool.poetry]
name = "yutang-web-crawler"
version = "0.1.0"
description = ""
authors = ["yutangchen <yutangchen@eland.com.tw>"]
readme = "README.md"
packages = [{include = "yutang_web_crawler"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pydantic = "^1.10.2"
sqlalchemy = "^1.4.44"
pymysql = "^1.0.2"
requests = "^2.28.1"
selenium = "^4.6.0"
schedule = "^1.1.0"
beautifulsoup4 = "^4.11.1"
jinja2 = "^3.1.2"
webdriver-manager = "^3.8.5"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
